<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWallet</string>
    <string name="accountdetail">卡片帳戶</string>
    <string name="textBalance">餘額: </string>
    <string name="btSetting">設定</string>
    <string name="btCards">我的卡片</string>
    <string name="btAccount">我的帳戶</string>
    <string name="btCardStore">卡片商店</string>
    <string name="tvPassword">請輸入密碼</string>
    <string name="tvID">帳號 : </string>
    <string name="tvPWD">密碼 : </string>
    <string name="tvCellPhone">手機 : </string>
    <string name="btRegist">註冊</string>
   	<string name="btToRegist">前往註冊</string>
    <string name="btLogin">登入</string>
    <string name="bad_crypto">Bad crypto?</string>
    <string name="bad_password">Bad password</string>
    <string name="cardstore">卡片商店</string>
    <string name="cancel">Cancel</string>
    <string name="config">Config</string>        
    <string name="connected_to_relay">Connected to NFCRelay</string>
    <string name="connecting_to_relay">Connecting to NFCRelay</string>    
    <string name="connection_to_relay_failed">Connection to NFCRelay failed</string>
    <string name="connection_to_relay_timed_out">Connection to NFCRelay timed out</string>
    <string name="connection_funny">connection is funny...ha</string>
    <string name="crypto_error">"Crypto error. Are both sides encrypting?"</string>
    <string name="data">Data</string>
    <string name="debug_logging">Debug Logging</string>
    <string name="default_ip">aaa.bbb.ccc.ddd</string>
    <string name="default_password">54321Password</string>
    <string name="default_port">9999</string>
    <string name="delete">刪除</string>
    <string name="dont_timeout">Prevents the screen from automatically shutting off.</string>
    <string name="enable_debug_logging">Enable debug logging (account numbers will be logged)</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="encrypt_communications">Encrypt communications</string>
    <string name="encrypt_desc">Encrypt network traffic.</string>
    <string name="equal">equal</string>
    <string name="error_getting_id">Error getting id. Checking encryption settings.</string>    
    <string name="export">Export to file</string>
    <string name="export_title">Export Filename</string>
    <string name="finished_reading">Finished reading tag</string>
    <string name="goback">返回</string>     
    <string name="index_out_bounds">index to responses out of bounds</string>
    <string name="ioexception">IOException...socket error?</string>
    <string name="ioexception_error_writing_socket">IOException. Error writing to socket?</string>
    <string name="ip">IP</string>
    <string name="ip_desc">The IP address or hostname of the relay</string> 
    <string name="importCredit">信用卡匯入</string>   
    <string name="keep_screen_on">Always keep screen on</string>    
    <string name="lost_connection">Lost connection tag?</string>
    <string name="lost_pcd">Lost PCD</string>
    <string name="lost_tag">Lost tag</string>
    <string name="login">登入</string>
    <string name="look_over">僅出示優惠</string>
    <string name="masked">0x70 [Masked]</string>
    <string name="message_frg">卡片優惠</string>
    <string name="myAccount">我的帳戶</string>
    <string name="min_password_length">Min password length is 8</string>
    <string name="mismatched_protocol">Mismatched protocol. Are both ends encrypting?</string>    
    <string name="mode_desc">Runs in relay mode if checked. Proxy mode if not checked.</string>
	<string name="name">卡片名稱</string>
	<string name="ndef_discovered">NDEF tag discovered</string>
    <string name="nfcproxy">NFCProxy</string>
    <string name="nfcproxy_connected_no_tag">NFCProxy connected, but NFCRelay has no tag</string>    
    <string name="nfcrelay">NFCRelay</string>
    <string name="nfcrelay_not_ready">NFCRelay not ready</string>    
    <string name="no_data">No data yet</string>
    <string name="not_connected_to_pcd">Not connected to PCD</string>
    <string name="not_equal">not equal</string>    
    <string name="ok">OK</string>
    <string name="p">P</string>
    <string name="pay">信用卡交易</string>
    <string name="password">Password</string>
    <string name="password_desc">For encrypting traffic. NOTE: Stored in plaintext.</string>
    <string name="password_not_saved">Password not saved</string>
    <string name="pcd">PCD</string>
    <string name="pcd_na_switch">PCD support not available.\nSwitching to Relay mode</string>        
    <string name="pcd_na_unpredict">PCD support not available.\nUnpredictable behavior ahead</string>
    <string name="port">Port</string>
    <string name="proxy_mode">Proxy mode</string>
    <string name="proxy_mode_unsupported">Proxy mode not supported.\nSwitching to Relay mode</string>    
    <string name="reader">Reader</string>
    <string name="reciept_frg">消費資訊</string>  
    <string name="relay_lost_tag">Relay lost tag</string>    
    <string name="relay_mode">Relay mode</string>
    <string name="relay_settings">Relay connection settings\n</string>
    <string name="replay_pcd">Replay PCD</string>    
    <string name="replay_pcd_on_next">請放置信用卡於NFC感應區</string>    
    <string name="replay_tag">Replay Tag</string>
    <string name="replay_tag_on_next">請置於讀卡機以進行交易</string>
    <string name="report_pcdb">PCD type B not currently supported. Please report (really) reader model to dev team!</string>    
    <string name="return_to_proxy_mode">Return to proxy mode</string>
    <string name="register">註冊</string>
    <string name="save">儲存</string>
    <string name="save_pcd">Save PCD requests</string>
    <string name="save_tag">Save tag responses</string>    
    <string name="save_to_db">儲存</string>
    <string name="saved">Card Type</string>
    <string name="saved_Credit">信用卡</string>
    <string name="saved_Type">信用卡類型</string>
    <string name="setting">設定</string>
    <string name="select_frg">卡片功能</string>
    <string name="settings">Settings</string>
    <string name="socket_error">Socket error</string>
    <string name="something_happened">something happened</string>    
    <string name="status">Status</string>
    <string name="switching_to_proxy_mode">Switching back to proxy mode</string>    
    <string name="t">T</string>
    <string name="tag">TAG</string>  
   	<string name="tag_discovered">TAG discovered</string>
  	<string name="tech_discovered">TECH discovered</string>
    <string name="time">Time</string>
    <string name="transaction_complete">Transaction Complete!</string>
    <string name="type_pcd">Type: PCD\n</string>
    <string name="type_tag">Type: TAG\n</string>
    <string name="unexpected_response">Unexpected response</string>
    <string name="unexpected_response_encrypting">Unexpected response. Are both sides encrypting?</string>    
    <string name="unknown_command">Unknown command</string>
    <string name="unknown_host">Unknown host. Use settings to set relay IP address</string>
    <string name="unsupported_tag">Unsupported tag type</string>    
    <string name="waiting">Waiting for tag...</string>
    <string name="warning_plaintext">(Warning: Stored in plaintext)</string>
    <string name="pull_to_refresh">下拉即可更新</string>
	<string name="release_to_refresh">釋放立即更新</string>
	<string name="refreshing">正在更新...</string>
	<string name="not_updated_yet">暫未更新過</string>
	<string name="updated_at">上次更新於%1$s前</string>
	<string name="updated_just_now">剛剛更新</string>
	<string name="time_error">時間有問題</string>
</resources>